@@ -3,6 +3,18 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
+datarootdir=@datarootdir@
+datadir=@datadir@
+
+xinelibdir=@xinelibdir@
+xinedatadir=@xinedatadir@
+
+acflags=@XINE_ACFLAGS@
+plugindir=@XINE_PLUGINDIR@
+scriptdir=@XINE_SCRIPTPATH@
+localedir=@XINE_LOCALEDIR@
+objcflags=@OBJCFLAGS@
+
 Name: libxine
 Description: The xine engine library
 Version: @XINE_MAJOR@.@XINE_MINOR@.@XINE_SUB@
